tests/baselines/reference/parserUnterminatedGeneric1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts (3 errors) ====
     interface IQService {
            all(promises: IPromise < any > []): IPromise<
                                                         
!!! error TS1005: '>' expected.
                          ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.
                                                ~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.